k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-fleet-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kibana.kickb.dev
        - fleet-server.kickb.dev
      secretName: kibana-tls
  rules:
    # Kibana
    - host: kibana.kickb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601

    # Fleet Server
    - host: fleet-server.kickb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleet-server
                port:
                  number: 8220
